--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,11 @@ services:
     env: python
     plan: free
     region: oregon
-    buildCommand: pip install -r src/requirements.txt
+    buildCommand: |
+      # Install Google Chrome for headless browsing
+      apt-get update
+      apt-get install -y google-chrome-stable
+      # Install Python dependencies
+      pip install -r src/requirements.txt
     startCommand: uvicorn src.main:app --host=0.0.0.0 --port=8080
     autoDeploy: true
