--- a/render.yaml
+++ b/render.yaml
@@ -5,9 +5,9 @@ services:
     plan: free
     region: oregon
     buildCommand: |
-      # Install Google Chrome for headless browsing
+      # Install the Chromium browser for headless browsing
       apt-get update
-      apt-get install -y google-chrome-stable
+      apt-get install -y chromium-browser
       # Install Python dependencies
       pip install -r src/requirements.txt
     startCommand: uvicorn src.main:app --host=0.0.0.0 --port=8080
